[workspace]
resolver = "2"
members = [
    "async_rust/chapter_01/build_own_runtime",
    "async_rust/chapter_01/configuring_our_runtime",
    "async_rust/chapter_01/creating_our_own_join_marco",
    "async_rust/chapter_01/increasing_workers_and_queues",
    "async_rust/chapter_01/passing_tasks_to_different_queues",
    "async_rust/chapter_01/refactoring_our_spawn_task_function",
    "async_rust/chapter_01/task_stealing",
    "async_rust/chapter_01_1/communicating_with_processes",
    "async_rust/chapter_01_1/fib_blocking",
    "async_rust/chapter_01_1/improving_http_request_performance_with_async",
    "async_rust/chapter_01_1/interacting_with_processes",
    "async_rust/chapter_01_1/introduction_to_processes",
    "async_rust/chapter_01_1/introduction_to_processes_multithreading",
]

[workspace.dependencies]
async-task = "4.7.1"
futures-lite = "2.6.1"
once_cell = "1.21.4"
flume = "0.12.0"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
