[package]
name = "improving_http_request_performance_with_async"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
