[package]
name = "building_out_own_async_runtime"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-task = "4.7.1"
futures-lite = "1.13.0"
flume = "0.11.1"

# dependencies below are for integrating our runtime with hyper
hyper = { version = "0.14.32", features = ["http1", "http2", "client", "runtime"] }
smol = "1.3.0"
anyhow = "1.0.102"
async-native-tls = "0.5.0"
http = "0.2.12"
tokio = "1.52.3"
mio = {version = "1.2.1", features = ["net", "os-poll"]}
